--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -1,45 +1,145 @@
 .container-fluid {
-    #subscribebox {
-        background-color: #7f8375;
-        color: white;
-        text-align: center;
-        font-family: 'Spartan', sans-serif;
-        padding: 8px;
-        font-weight: 100;
-        font-size: 80%;
+  #subscribebox {
+    background-color: #7f8375;
+    color: white;
+    text-align: center;
+    font-family: 'Spartan', sans-serif;
+    padding: 8px;
+    font-weight: 100;
+    font-size: 80%;
+    text-transform: uppercase;
+  }
+
+}
+
+.start-container {
+
+  .welcome-img {
+    background-image: url("../public/assets/men_hoodie_white.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 720px;
+
+  }
+
+  .gecko-info {
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+    .gecko-news {
+      font-family: 'Spartan', sans-serif;
+      font-weight: 100;
+      font-size: 80%;
+      text-transform: uppercase;
+      // color: white;
     }
+
+    .shop-women {
+      width: 50%;
+      margin: 10px;
+      padding: 5px;
+      background-color: white;
+      border: none;
+      font-family: 'Spartan', sans-serif;
+      text-transform: uppercase;
+      font-weight: 100;
+      font-size: 80%;
+
+    }
+
+    .shop-men {
+      width: 50%;
+      padding: 5px;
+      background-color: white;
+      border: none;
+      font-family: 'Spartan', sans-serif;
+      text-transform: uppercase;
+      font-weight: 100;
+      font-size: 80%;
+    }
+  }
+
 }
 
 
+.new-arrival {
+  p {
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: 100%;
+  }
+}
+
+.top-seller {
+  p {
+    text-transform: uppercase;
+    font-weight: 100;
+    font-size: 100%;
+  }
+}
 
 .scrolling-wrapper {
-    display:flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    
-  
-    .scroll-items {
-    
-        display: inline-block;
-      .product-image {
-          width: 45vw;
-          margin: 10px;
-          
-          img {
-              
-              width: 100%;
-        }
-      }
-      .product-info {
-        .product-title {
-            .title {}
-            .color {}
-        }
-      }
-      .product-price {
-          .price {}
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+
+
+  .scroll-items {
+
+    display: inline-block;
+
+    .product-image {
+      width: 45vw;
+      margin: 10px;
+
+      img {
+
+        width: 100%;
       }
     }
+
+
+
+
+    .product-info {
+      .product-title {
+        .title {}
+
+        .color {}
+      }
+    }
+
+    .product-price {
+      .price {}
+    }
   }
+
+}
+
+.gecko-store {
+  margin: 10px;
+  font-family: 'Spartan', sans-serif;
+
+  p {
+    text-transform: uppercase;
+    font-weight: 200;
+    font-size: 150%;
+  }
+
+
+  .gecko-text {
+    text-align: center;
+    font-family: 'Spartan', sans-serif;
+    margin: 5px;
+    font-weight: 100;
+    font-size: 100%;
+  }
+
+}
