--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -78,7 +78,7 @@
 
     <div class="gecko-store">
         <p>gecko store</p>
-        
+
 
         <div class="gecko-text">
             GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam unde
@@ -86,7 +86,9 @@
             voluptatem?
         </div>
     </div>
+    <%- include ("partial/tothetop.ejs") %>
     <%- include ("partial/footer.ejs") %>
+
 </body>
 
 
