--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,4 +9,5 @@
 @import 'detailProductPage';
 @import 'shoppingCart';
 @import 'checkout';
+@import 'backToTop';
 @import url('https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap');
