--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -1,145 +1,175 @@
-.container-fluid {
-  #subscribebox {
-    background-color: #7f8375;
-    color: white;
-    text-align: center;
-    font-family: 'Spartan', sans-serif;
-    padding: 8px;
-    font-weight: 100;
-    font-size: 80%;
-    text-transform: uppercase;
-  }
-
-}
-
-.start-container {
-
-  .welcome-img {
-    background-image: url("../public/assets/men_hoodie_white.jpeg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 720px;
-
-  }
-
-  .gecko-info {
-    display: flex;
-    // justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-
-    .gecko-news {
-      font-family: 'Spartan', sans-serif;
-      font-weight: 100;
-      font-size: 80%;
-      text-transform: uppercase;
-      // color: white;
-    }
-
-    .shop-women {
-      width: 50%;
-      margin: 10px;
-      padding: 5px;
-      background-color: white;
-      border: none;
-      font-family: 'Spartan', sans-serif;
-      text-transform: uppercase;
-      font-weight: 100;
-      font-size: 80%;
-
-    }
-
-    .shop-men {
-      width: 50%;
-      padding: 5px;
-      background-color: white;
-      border: none;
-      font-family: 'Spartan', sans-serif;
-      text-transform: uppercase;
-      font-weight: 100;
-      font-size: 80%;
-    }
-  }
-
-}
-
-
-.new-arrival {
-  p {
-    text-transform: uppercase;
-    font-weight: 100;
-    font-size: 100%;
-  }
-}
-
-.top-seller {
-  p {
-    text-transform: uppercase;
-    font-weight: 100;
-    font-size: 100%;
-  }
-}
-
-.scrolling-wrapper {
-  display: flex;
-  flex-direction: row;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
-
-
-  .scroll-items {
-
-    display: inline-block;
-
-    .product-image {
-      width: 45vw;
-      margin: 10px;
-
-      img {
-
-        width: 100%;
-      }
-    }
-
-
-
-
-    .product-info {
-      .product-title {
-        .title {}
-
-        .color {}
-      }
-    }
-
-    .product-price {
-      .price {}
-    }
-  }
-
-}
-
-.gecko-store {
-  margin: 10px;
+* {
   font-family: 'Spartan', sans-serif;
 
-  p {
-    text-transform: uppercase;
-    font-weight: 200;
-    font-size: 150%;
+
+  .container-fluid {
+    #subscribebox {
+      background-color: #7f8375;
+      color: white;
+      text-align: center;
+      padding: 8px;
+      font-weight: 100;
+      font-size: 80%;
+      text-transform: uppercase;
+    }
+
+  }
+
+  .start-container {
+    position: relative;
+    height: 712px;
+
+    .opacity {
+      position: absolute;
+      opacity: 0.2;
+      z-index: 2;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+
+    }
+
+    .welcome-img {
+      display: flex;
+      position: absolute;
+      align-items: center;
+      justify-content: center;
+      background-image: url("../public/assets/men_hoodie_white.jpeg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+
+    .gecko-info {
+      display: flex;
+      position: relative;
+      align-items: center;
+      transform: translateY(180%);
+      flex-direction: column;
+      z-index: 1000;
+
+      h1 {
+        color: white;
+        font-weight: 700;
+        font-size: 200%;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+      }
+
+      span {
+        font-size: 75%;
+        font-weight: 100;
+        color: white;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+
+
+      }
+
+
+      .shop-women {
+        width: 50%;
+        margin: 10px;
+        padding: 7px;
+        background-color: white;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 60%;
+
+      }
+
+      .shop-men {
+        width: 50%;
+        padding: 7px;
+        background-color: white;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 60%;
+      }
+    }
+
   }
 
 
-  .gecko-text {
-    text-align: center;
-    font-family: 'Spartan', sans-serif;
-    margin: 5px;
-    font-weight: 100;
-    font-size: 100%;
+  .new-arrival {
+    p {
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 90%;
+      margin: 30px 0px 10px 9px;
+    }
   }
 
+  .top-seller {
+    p {
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 90%;
+      margin: 30px 0px 10px 9px;
+    }
+  }
+
+  .scrolling-wrapper {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+
+    .scroll-items {
+
+      display: inline-block;
+
+      .product-image {
+        width: 45vw;
+        margin: 10px;
+
+        img {
+
+          width: 100%;
+        }
+      }
+
+      .title {
+        font-size: 85%;
+        font-weight: 200;
+        margin: 15px 0px 15px 9px;
+      }
+
+      .price {
+        font-size: 70%;
+        font-weight: 600;
+        margin: 12px 0px 12px 9px;
+      }
+    }
+  }
+
+  .gecko-store {
+    margin: 10px;
+
+    p {
+      text-transform: uppercase;
+      font-weight: 200;
+      font-size: 150%;
+    }
+
+
+    .gecko-text {
+      text-align: center;
+      margin: 5px;
+      font-weight: 100;
+      font-size: 100%;
+    }
+
+  }
 }
