wishlist is now cart

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -24,7 +24,7 @@
 
     <div class="all-products-container">
     
-        <% user.wishlist.forEach( (product) => { %>
+        <% user.cart.forEach( (product) => { %>
 
         <div class="product-container">
 
