--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -66,7 +66,7 @@
         </div>
 
         <div class="desktop-bag">
-            <button>add to bag</button>
+            <a href="/cart/<%=clickedProduct._id%>"><button>add to bag</button></a>
         </div>
 
         <div class="product-description">
@@ -92,7 +92,7 @@
         </div>
         <div class="buttons-about-bag-container">
             <button class="choose-size">product info +</button>
-            <button class="add-to-bag">add to bag</button>
+            <a href="/cart/<%=clickedProduct._id%>"><button class="add-to-bag">add to bag</button></a>
         </div>
     </div>
 
