--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -43,7 +43,7 @@
                     </div>
                     <div class="product-price">
                         <span class="price"><%= product.price%> SEK</span>
-                        <span class="wish-list"><a href="/wishlist/<%=product._id %>"> <img src="../public/assets/heart.png"/></a></span>
+                        <span class="wish-list"><a href=> <img src="../public/assets/heart.png"/></a></span>
                     </div>
                 </div>
             </div>
