--- a/public/main.css
+++ b/public/main.css
@@ -470,8 +470,7 @@ body {
     justify-content: center;
     width: 100%; }
     #detail-product-page #image-div-mobile .image-container {
-      max-width: 1000px;
-      max-height: 800px; }
+      width: 100%; }
       #detail-product-page #image-div-mobile .image-container img {
         width: 100%;
         height: 100%;
