--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -19,8 +19,8 @@
         width: 100%;
 
         .image-container {
-            max-width: 1000px;
-            max-height: 800px;
+            width: 100%;
+            
             img {
                 width: 100%;
                 height: 100%;
@@ -179,7 +179,7 @@
             @include tablet {
                 display: flex;
             }
-
+            
             button {
                 width: 100%;
                 height: 40px;
@@ -271,7 +271,7 @@
             justify-content: space-between;
             width: 100%;
             height: 60px;
-
+            
             button {
                 width: 48%;
                 height: 40px;
