--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -1,4 +1,4 @@
-<% user.wishlist.forEach( (product) => { %>
+<% user.cart.forEach( (product) => { %>
 
     <li>
         <%= product.productId._id %>
@@ -12,7 +12,7 @@
     <li>
         <%= product.productId.description %>
     </li>
-    <a href="/deleteWishlist/<%= product.productId._id %>">Delete</a>
+    <a href="/deleteCart/<%= product.productId._id %>">Delete</a>
     <br>
     <hr>
     <br>
