--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -74,14 +74,20 @@
         <% }); %>
     </div>
 
+    <div class="women"></div>
+    <div class="men"></div>
+
     <div class="gecko-store">
-        <p>gecko store</p>
+        <span class="gecko-title">gecko store</span>
+        <div class="gecko-store-img"></div>
 
 
         <div class="gecko-text">
             GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam unde
             eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit, asperiores
-            voluptatem?
+            voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum dicta
+            nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet dignissimos
+            repellendus.
         </div>
     </div>
     <%- include ("partial/tothetop.ejs") %>
