admin page urls

--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -29,10 +29,10 @@
             <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
         </div>
         <div class="image-container">
-            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+            <img src="<%= clickedProduct.imgUrl2 %>" alt="product-image">
         </div>
         <div class="image-container">
-            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+            <img src="<%= clickedProduct.imgUrl3 %>" alt="product-image">
         </div>
     </div>
 
