--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -26,6 +26,16 @@
             </div>
 
             <div class="form-group">
+                <label for="imgUrl2">Image URL 2</label>
+                <input class="form-control" type="text" name="imgUrl" />
+            </div>
+
+            <div class="form-group">
+                <label for="imgUrl3">Image URL 3</label>
+                <input class="form-control" type="text" name="imgUrl" />
+            </div>
+
+            <div class="form-group">
                 <label for="price">Price</label>
                 <input class="form-control" type="text" name="price" />
             </div>
@@ -61,10 +71,6 @@
         </form>
     </div>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> a153e1301876d2d7abbaad05e447c68c87639a3a
     <div class="all-products">
         <div class="all-products-header">
             <h2>All products in database</h2>
@@ -77,6 +83,8 @@
                 </div>
                 <p>Title: <input class="text-input" name="title" type="text" value="<%= product.title %>"></p>
                 <p>imgUrl: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl %>"></p>
+                <p>imgUrl 2: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl2 %>"></p>
+                <p>imgUrl 3: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl3 %>"></p>
                 <p>Price: <input class="text-input" name="price" type="text" value="<%= product.price %>"></p>
                 <p>Description: <input class="text-input" name="description" type="text"
                         value="<%= product.description %>"></p>
