--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -20,74 +20,84 @@
             <h1>gecko news</h1>
             <span>100% organic cotton</span>
 
-            <button class="shop-women">shop women</button>
-            <button class="shop-men">shop men</button>
+            <a href="/women"><button class="shop-women">shop women</button></a>
+            <a href="/men"><button class="shop-men">shop men</button></a>
 
         </div>
         <div class="opacity"></div>
     </div>
+    <div class="container">
+        <div class="new-arrival">
+            <p>new arrivals</p>
+        </div>
+        <div class="scrolling-wrapper">
+            <% startPageProducts.newArrivals.forEach(newArrival => { %>
+            <div class="scroll-items">
 
-    <div class="new-arrival">
-        <p>new arrivals</p>
-    </div>
-    <div class="scrolling-wrapper">
-        <% startPageProducts.newArrivals.forEach(newArrival => { %>
-        <div class="scroll-items">
 
-
-            <div class="product-image">
-                <a href="/products/<%= newArrival._id %>"><img src="<%= newArrival.imgUrl %>" alt="productImage"></a>
+                <div class="product-image">
+                    <a href="/products/<%= newArrival._id %>"><img src="<%= newArrival.imgUrl %>"
+                            alt="productImage"></a>
+                </div>
+                <div class="product-info">
+                    <div class="product-title">
+                        <span class="title"><%= newArrival.title %></span>
+                        <span class="colors"></span>
+                    </div>
+                    <div class="product-price">
+                        <span class="price"><%= newArrival.price %> SEK</span>
+                    </div>
+                </div>
             </div>
-            <div class="product-info">
-                <div class="product-title">
-                    <span class="title"><%= newArrival.title %></span>
-                    <span class="colors"></span>
+            <% }); %>
+        </div>
+        <div class="top-seller">
+            <p>top seller</p>
+        </div>
+        <div class="scrolling-wrapper">
+            <% startPageProducts.topSellers.forEach(topSeller => { %>
+            <div class="scroll-items">
+
+
+                <div class="product-image">
+                    <a href="/products/<%= topSeller._id %>"><img src="<%= topSeller.imgUrl %>" alt="productImage"></a>
                 </div>
-                <div class="product-price">
-                    <span class="price"><%= newArrival.price %> SEK</span>
+                <div class="product-info">
+                    <div class="product-title">
+                        <span class="title"><%= topSeller.title %></span>
+                        <span class="colors"></span>
+                    </div>
+                    <div class="product-price">
+                        <span class="price"><%= topSeller.price %> SEK</span>
+                    </div>
                 </div>
+            </div>
+            <% }); %>
+        </div>
+
+        <div class="category-img">
+            <div class="women">
+                <a href="/women"><button class="shop-women">shop women</button></a>
             </div>
         </div>
-        <% }); %>
-    </div>
-    <div class="top-seller">
-        <p>top seller</p>
-    </div>
-    <div class="scrolling-wrapper">
-        <% startPageProducts.topSellers.forEach(topSeller => { %>
-        <div class="scroll-items">
-
-
-            <div class="product-image">
-                <a href="/products/<%= topSeller._id %>"><img src="<%= topSeller.imgUrl %>" alt="productImage"></a>
-            </div>
-            <div class="product-info">
-                <div class="product-title">
-                    <span class="title"><%= topSeller.title %></span>
-                    <span class="colors"></span>
-                </div>
-                <div class="product-price">
-                    <span class="price"><%= topSeller.price %> SEK</span>
-                </div>
+        <div class="category-img">
+            <div class="men">
+                <a href="/men"><button class="shop-men">shop men</button></a>
             </div>
         </div>
-        <% }); %>
-    </div>
 
-    <div class="women"></div>
-    <div class="men"></div>
-
-    <div class="gecko-store">
-        <span class="gecko-title">gecko store</span>
-        <div class="gecko-store-img"></div>
+        <div class="gecko-store">
+            <span class="gecko-title">gecko store</span>
+            <div class="gecko-store-img"></div>
 
 
-        <div class="gecko-text">
-            GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam unde
-            eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit, asperiores
-            voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum dicta
-            nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet dignissimos
-            repellendus.
+            <div class="gecko-text">
+                GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam unde
+                eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit, asperiores
+                voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum dicta
+                nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet dignissimos
+                repellendus.
+            </div>
         </div>
     </div>
     <%- include ("partial/tothetop.ejs") %>
