--- a/public/main.css
+++ b/public/main.css
@@ -139,7 +139,8 @@ body {
     visibility: visible;
     transition: 0.5s;
     transform: translateX(0%);
-    transition-timing-function: ease-out; }
+    transition-timing-function: ease-out;
+    z-index: 2000; }
     @media (min-width: 820px) {
       body .nav-show {
         width: 70%; } }
@@ -167,7 +168,7 @@ body {
         background-color: #cccccc;
         height: 25px;
         width: 25px;
-        margin: 10px 0 10px; }
+        margin: 5px 0 10px; }
   body .logo {
     background-image: url("../public/assets/Logo-gecko.png");
     background-size: cover;
@@ -203,9 +204,9 @@ body {
     background-color: #7f8375;
     color: white;
     text-align: center;
-    padding: 8px;
+    padding: 12px;
     font-weight: 100;
-    font-size: 80%;
+    font-size: 70%;
     text-transform: uppercase; }
   * .start-container {
     position: relative;
@@ -253,7 +254,7 @@ body {
         letter-spacing: 2px;
         margin-bottom: 10px; }
       * .start-container .gecko-info .shop-women {
-        width: 50%;
+        width: 200px;
         margin: 10px;
         padding: 7px;
         background-color: white;
@@ -262,7 +263,8 @@ body {
         font-weight: 400;
         font-size: 60%; }
       * .start-container .gecko-info .shop-men {
-        width: 50%;
+        width: 200px;
+        margin: 10px;
         padding: 7px;
         background-color: white;
         border: none;
@@ -273,12 +275,12 @@ body {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 90%;
-    margin: 30px 0px 10px 9px; }
+    margin: 30px 0px 10px 0px; }
   * .top-seller p {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 90%;
-    margin: 30px 0px 10px 9px; }
+    margin: 30px 0px 10px 0px; }
   * .scrolling-wrapper {
     display: flex;
     flex-direction: row;
@@ -289,49 +291,82 @@ body {
       display: inline-block; }
       * .scrolling-wrapper .scroll-items .product-image {
         width: 45vw;
-        margin: 10px; }
+        margin-right: 20px; }
         * .scrolling-wrapper .scroll-items .product-image img {
           width: 100%; }
       * .scrolling-wrapper .scroll-items .title {
         font-size: 85%;
         font-weight: 200;
-        margin: 15px 0px 15px 9px; }
+        margin: 15px 0px 15px 0px; }
       * .scrolling-wrapper .scroll-items .price {
         font-size: 70%;
         font-weight: 600;
-        margin: 12px 0px 12px 9px; }
-  * .gecko-store {
-    margin: 10px; }
-    * .gecko-store .gecko-store-img {
-      background-image: url("../public/assets/geckostore.png");
+        margin: 12px 0px 12px 0px; }
+  * .gecko-store .gecko-store-img {
+    background-image: url("../public/assets/geckostore.png");
+    width: 100%;
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  * .gecko-store .gecko-title {
+    text-transform: uppercase;
+    font-weight: 200;
+    font-size: 150%; }
+  * .gecko-store .gecko-text {
+    text-align: center;
+    font-weight: 100;
+    font-size: 100%; }
+  * .category-img {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+    * .category-img .women {
+      background-image: url("../public/assets/women_crewneck_black.jpeg");
       width: 100%;
-      height: 500px;
+      height: 800px;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: cover; }
-    * .gecko-store .gecko-title {
-      text-transform: uppercase;
-      font-weight: 200;
-      font-size: 150%; }
-    * .gecko-store .gecko-text {
+      background-size: cover;
+      margin: 20px 0px 20px 0px;
+      position: relative;
+      z-index: 1; }
+      * .category-img .women .shop-women {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 200px;
+        margin: 10px;
+        padding: 7px;
+        background-color: white;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 60%; }
+    * .category-img .men {
+      background-image: url("../public/assets/men_tshirt_green.jpeg");
+      width: 100%;
+      height: 800px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative; }
+    * .category-img .shop-men {
       text-align: center;
-      font-weight: 100;
-      font-size: 100%;
-      margin: 30px; }
-  * .women {
-    background-image: url("../public/assets/women_crewneck_black.jpeg");
-    width: 100%;
-    height: 800px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; }
-  * .men {
-    background-image: url("../public/assets/men_tshirt_green.jpeg");
-    width: 100%;
-    height: 800px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; }
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 200px;
+      margin: 10px;
+      padding: 7px;
+      background-color: white;
+      border: none;
+      text-transform: uppercase;
+      font-weight: 400;
+      font-size: 60%; }
 
 .create-new-product-form {
   display: flex;
