--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -83,6 +83,7 @@ body {
         transition: 0.5s;
         transform: translateX(0%);
         transition-timing-function: ease-out;
+        z-index: 2000;
 
         // opacity: unset;
         @include tablet {
@@ -121,7 +122,7 @@ body {
                 background-color: #cccccc;
                 height: 25px;
                 width: 25px;
-                margin: 10px 0 10px;
+                margin: 5px 0 10px;
 
             }
         }
@@ -135,6 +136,7 @@ body {
         background-repeat: no-repeat;
         height: 40px;
         width: 60px;
+
     }
 
     .wishlistandcart {
