--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -7,9 +7,9 @@
       background-color: #7f8375;
       color: white;
       text-align: center;
-      padding: 8px;
+      padding: 12px;
       font-weight: 100;
-      font-size: 80%;
+      font-size: 70%;
       text-transform: uppercase;
     }
 
@@ -69,13 +69,10 @@
         color: white;
         letter-spacing: 2px;
         margin-bottom: 10px;
-
-
       }
 
-
       .shop-women {
-        width: 50%;
+        width: 200px;
         margin: 10px;
         padding: 7px;
         background-color: white;
@@ -87,7 +84,8 @@
       }
 
       .shop-men {
-        width: 50%;
+        width: 200px;
+        margin: 10px;
         padding: 7px;
         background-color: white;
         border: none;
@@ -105,7 +103,7 @@
       text-transform: uppercase;
       font-weight: 300;
       font-size: 90%;
-      margin: 30px 0px 10px 9px;
+      margin: 30px 0px 10px 0px;
     }
   }
 
@@ -114,7 +112,7 @@
       text-transform: uppercase;
       font-weight: 300;
       font-size: 90%;
-      margin: 30px 0px 10px 9px;
+      margin: 30px 0px 10px 0px;
     }
   }
 
@@ -132,7 +130,8 @@
 
       .product-image {
         width: 45vw;
-        margin: 10px;
+        margin-right: 20px;
+
 
         img {
 
@@ -143,19 +142,19 @@
       .title {
         font-size: 85%;
         font-weight: 200;
-        margin: 15px 0px 15px 9px;
+        margin: 15px 0px 15px 0px;
       }
 
       .price {
         font-size: 70%;
         font-weight: 600;
-        margin: 12px 0px 12px 9px;
+        margin: 12px 0px 12px 0px;
       }
     }
   }
 
   .gecko-store {
-    margin: 10px;
+
 
     .gecko-store-img {
       background-image: url("../public/assets/geckostore.png");
@@ -178,27 +177,73 @@
       text-align: center;
       font-weight: 100;
       font-size: 100%;
-      margin: 30px;
+      // margin: 30px;
     }
 
   }
 
-  .women {
-    background-image: url('../public/assets/women_crewneck_black.jpeg');
-    width: 100%;
-    height: 800px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 
-  }
 
-  .men {
-    background-image: url('../public/assets/men_tshirt_green.jpeg');
-    width: 100%;
-    height: 800px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  .category-img {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .women {
+
+      background-image: url('../public/assets/women_crewneck_black.jpeg');
+      width: 100%;
+      height: 800px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: 20px 0px 20px 0px;
+      position: relative;
+      z-index: 1;
+
+      .shop-women {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 200px;
+        margin: 10px;
+        padding: 7px;
+        background-color: white;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 60%;
+
+      }
+
+    }
+
+    .men {
+      background-image: url('../public/assets/men_tshirt_green.jpeg');
+      width: 100%;
+      height: 800px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+
+    .shop-men {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 200px;
+      margin: 10px;
+      padding: 7px;
+      background-color: white;
+      border: none;
+      text-transform: uppercase;
+      font-weight: 400;
+      font-size: 60%;
+    }
   }
 }
