--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -13,7 +13,7 @@
             <h2>Create new product</h2>
         </div>
 
-        <form action="/admin" class="createproduct" method="post">
+        <form action="/createProduct" class="createproduct" method="POST">
 
             <div class="form-group">
                 <label for="title">Product title</label>
@@ -27,12 +27,12 @@
 
             <div class="form-group">
                 <label for="imgUrl2">Image URL 2</label>
-                <input class="form-control" type="text" name="imgUrl" />
+                <input class="form-control" type="text" name="imgUrlTwo" />
             </div>
 
             <div class="form-group">
                 <label for="imgUrl3">Image URL 3</label>
-                <input class="form-control" type="text" name="imgUrl" />
+                <input class="form-control" type="text" name="imgUrlThree" />
             </div>
 
             <div class="form-group">
@@ -83,8 +83,8 @@
                 </div>
                 <p>Title: <input class="text-input" name="title" type="text" value="<%= product.title %>"></p>
                 <p>imgUrl: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl %>"></p>
-                <p>imgUrl 2: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl2 %>"></p>
-                <p>imgUrl 3: <input class="text-input" name="imgUrl" type="text" value="<%= product.imgUrl3 %>"></p>
+                <p>imgUrl 2: <input class="text-input" name="imgUrlTwo" type="text" value="<%= product.imgUrlTwo %>"></p>
+                <p>imgUrl 3: <input class="text-input" name="imgUrlThree" type="text" value="<%= product.imgUrlThree %>"></p>
                 <p>Price: <input class="text-input" name="price" type="text" value="<%= product.price %>"></p>
                 <p>Description: <input class="text-input" name="description" type="text"
                         value="<%= product.description %>"></p>
