--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -20,7 +20,7 @@ body {
     }
 
     .information {
-        font-size: 67%;
+        font-size: 60%;
         text-transform: uppercase;
         font-weight: 500;
         padding: 5px;
@@ -28,7 +28,7 @@ body {
 
     li {
         font-weight: 100;
-        font-size: 85%;
+        font-size: 65%;
         list-style-type: none;
         justify-content: left;
     }
@@ -75,6 +75,11 @@ body {
         width: 300px;
         padding: 30px;
         padding-bottom: 70px;
+
+        span {
+            font-size: 12px;
+
+        }
     }
 
     h4 {
@@ -82,24 +87,31 @@ body {
         font-size: 140%;
         font-weight: 800;
         letter-spacing: 3px;
+        margin-bottom: 10px;
     }
 
     .sign-up {
-        width: 100%;
-        height: 45px;
+        width: 70%;
+        height: 30px;
         font-weight: 100;
-        font-size: 14px;
+        font-size: 12px;
+        margin-top: 20px;
     }
 
     #subscribe {
         background-color: #7f8375;
         color: white;
         font-weight: 100;
+        font-size: 14px;
+        width: 40%;
+        height: 30px;
+
     }
 
     p {
         margin: 16px 16px;
         font-weight: 100;
+        font-size: 12px;
     }
 
 }
