--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -43,17 +43,17 @@
     <ul class="about">
         <li class="free-shipping">Free shipping on orders over 990 sek, and free returns</li>
 
-        <li><a href="/men">Subcribe</a></li>
-        <li><a href="/men">Store Locator</a></li>
-        <li><a href="/men">Customer Service</a></li>
+        <li><a href="/products">Subcribe</a></li>
+        <li><a href="/products">Store Locator</a></li>
+        <li><a href="/products">Customer Service</a></li>
     </ul>
 
     <ul class="sign-in">
-        <li><a href="/men">Sign in</a></li>
-        <li><a href="/men">Shipping to: Worldwide</a></li>
-
+        <li><a href="/login">Sign in</a></li>
+        <li><a href="/logout">Log out</a></li>
+        <li><a href="/register">Don't have an account? Register here</a></li>
+        <li><a href="/products">Shipping to: Worldwide</a></li>
     </ul>
-
 </nav>
 <div class="cover">
 
