--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -1,4 +1,3 @@
-
 <%- include ("partial/header.ejs") %>
 
 <body>
@@ -11,7 +10,7 @@
     </div>
     <!-- Navbar -->
     <%- include ("partial/navbar.ejs") %>
-    <%- include ("partial/logout") %>
+
 
     <section id="product-page">
         <!-- Categories -->
@@ -33,8 +32,7 @@
             <div class="product">
 
                 <div class="product-image">
-                    <a href="/products/<%= product._id %>"><img src="<%= product.imgUrl %>"
-                            alt="product-image"></a>
+                    <a href="/products/<%= product._id %>"><img src="<%= product.imgUrl %>" alt="product-image"></a>
                 </div>
                 <div class="product-info">
                     <div class="product-title">
@@ -43,7 +41,7 @@
                     </div>
                     <div class="product-price">
                         <span class="price"><%= product.price%> SEK</span>
-                        <span class="wish-list"><a href=> <img src="../public/assets/heart.png"/></a></span>
+                        <span class="wish-list"><a href=> <img src="../public/assets/heart.png" /></a></span>
                     </div>
                 </div>
             </div>
@@ -52,15 +50,15 @@
 
         <div class="show-more">
             <% if(totalPages !== itemsToShow/itemPerPage ) { %>
-                <a href="/<%=route%>/?page=<%=(itemsToShow/itemPerPage) + 1%>">Show more</a>
+            <a href="/<%=route%>/?page=<%=(itemsToShow/itemPerPage) + 1%>">Show more</a>
             <% } else { %>
-                <a href="/<%=route%>/?page=1">Show less</a>
+            <a href="/<%=route%>/?page=1">Show less</a>
             <% } %>
         </div>
 
     </section>
 
-    
+
 
     <%- include ("partial/footer") %>
 
