--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -180,14 +180,19 @@
                 display: flex;
             }
             
-            button {
+            a {
                 width: 100%;
-                height: 40px;
-                margin: 20px 0 0 0;
-                border-color: rgb(225, 225, 225);
-                background-color:#7f8375;
-                color: white;
+
+                button {
+                    width: 100%;
+                    height: 40px;
+                    margin: 20px 0 0 0;
+                    border-color: rgb(225, 225, 225);
+                    background-color:#7f8375;
+                    color: white;
+                }
             }
+            
         }
 
         .product-description {
@@ -280,10 +285,16 @@
             .choose-size {
                 background-color: white;
             }
-            .add-to-bag {
-                background-color:#7f8375;
-                color: white;
+            a {
+                width: 48%;
+
+                .add-to-bag {
+                    width: 100%;
+                    background-color:#7f8375;
+                    color: white;
+                }
             }
+            
         }
 
         @include tablet {
