--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -30,10 +30,10 @@
                 <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
             </div>
             <div class="image-container">
-                <img src="<%= clickedProduct.imgUrl2 %>" alt="product-image">
+                <img src="<%= clickedProduct.imgUrlTwo %>" alt="product-image">
             </div>
             <div class="image-container">
-                <img src="<%= clickedProduct.imgUrl3 %>" alt="product-image">
+                <img src="<%= clickedProduct.imgUrlThree %>" alt="product-image">
             </div>
         </div>
 
