--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -4,6 +4,7 @@
 
 <body>
     <%- include ("partial/navbar") %>
+    <%- include ("partial/tothetop") %>
 
 
     <div class="create-new-product-form">
