--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -13,6 +13,7 @@
         </div>
     </div>
     <%- include ("partial/navbar") %>
+    <%- include ("partial/tothetop") %>
 
 
     <!-- Checkout -->
