--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -1,4 +1,5 @@
 <%- include ("partial/header.ejs") %>
+<%- include ("partial/tothetop") %>
 
 <body>
     <div class="container-fluid">
@@ -37,7 +38,7 @@
                 <div class="product-info">
                     <div class="product-title">
                         <span class="title"><%= product.title %></span>
-                        <span class="colors">ooo</span>
+                        <span class="colors"></span>
                     </div>
                     <div class="product-price">
                         <span class="price"><%= product.price%> SEK</span>
