--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -1,6 +1,7 @@
 <%- include ("partial/header") %>
 
 <%- include ("partial/navbar") %>
+<%- include ("partial/tothetop") %>
 
 <form action=“/reset/:token” method=“post”>
 
