--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -12,6 +12,7 @@
     </div>
 
     <%- include ("partial/navbar.ejs") %>
+    <%- include ("partial/tothetop") %>
 
 
     <div class="start-container">
