--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,7 @@
 <body>
 
     <%- include ("partial/navbar") %>
+    <%- include ("partial/tothetop") %>
 
 
     <div class="create-new-product-form">
