--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -1,5 +1,6 @@
 <%- include ("partial/header") %>
 <%- include ("partial/navbar") %>
+<%- include ("partial/tothetop") %>
 
 <body>
     <h2>Log in as admin</h2>
