--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,5 +1,6 @@
 <%- include ("partial/header") %>
 <%- include ("partial/navbar") %>
+<%- include ("partial/tothetop") %>
 
 
 Reset your password <a href="">HERE</a>
