--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -17,14 +17,30 @@
         display: flex;
         justify-content: center;
         width: 100%;
+        position: relative;
+        .arrow {
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            // transform: translate(-50%, -50%);
+            color: whitesmoke;
+        }
 
         .image-container {
-            width: 100%;
+            display: flex;
+            flex-direction: row;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+
+            .middle-picture {
+                margin: 0 15px;
+            }
             
             img {
-                width: 100%;
+                width: 100vw;
                 height: 100%;
-                object-fit: cover;
+                // object-fit: cover;
             }
         }
         @include tablet {
