--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -19,7 +19,7 @@
     <section id="detail-product-page">
         <!-- image mobile -->
         <div id="image-div-mobile">
-            <span class="arrow">bajs</span>
+                <i class=" dots fas fa-ellipsis-h"></i>
             <div class="image-container">
                 <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
                 <img src="<%= clickedProduct.imgUrlTwo %>" alt="product-image" class="middle-picture">
@@ -66,6 +66,13 @@
                     <button>M</button>
                     <button>L</button>
                     <button>XL</button>
+                    <select id="" name="size">
+                            <option value="xs">XS</option>
+                            <option value="s">S</option>
+                            <option value="m">M</option>
+                            <option value="l">L</option>
+                            <option value="xl">XL</option>
+                          </select>
                 </div>
 
                 <div class="desktop-bag">
