--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -18,16 +18,17 @@
         justify-content: center;
         width: 100%;
         position: relative;
-        .arrow {
+        .dots {
             text-align: center;
             position: absolute;
             bottom: 0;
             // transform: translate(-50%, -50%);
             color: whitesmoke;
+            margin-bottom: 20px;
+            font-size: x-large;
         }
 
         .image-container {
-            display: flex;
             flex-direction: row;
             overflow-x: scroll;
             overflow-y: hidden;
