--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -16,14 +16,18 @@
 
 
     <div class="start-container">
-        <div class="welcome-img"></div>
-        <div class="gecko-info">
-            <h1>gecko news</h1>
-            <span>100% organic cotton</span>
+        <div class="welcome-container">
+            <div class="welcome-img-one"></div>
+            <div class="welcome-img-two"></div>
 
-            <a href="/women"><button class="shop-women">shop women</button></a>
-            <a href="/men"><button class="shop-men">shop men</button></a>
+            <div class="gecko-info">
+                <h1>gecko news</h1>
+                <span>100% organic cotton</span>
 
+                <a href="/women"><button class="shop-women">shop women</button></a>
+                <a href="/men"><button class="shop-men">shop men</button></a>
+
+            </div>
         </div>
         <div class="opacity"></div>
     </div>
