--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -58,7 +58,7 @@
       }
 
       .welcome-img-two {
-        background-image: url("../public/assets/");
+        background-image: url("../public/assets/men_hoodie_white.jpeg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
